--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
     <!-- BEGIN: Custom CSS-->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <!-- END: Custom CSS-->
+    <meta name="google-site-verification" content="RqnsC4ojb1h_B6SNod5awSt1R1HkutsSy-FQ68jnXeQ" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-50PHYT6ME6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-50PHYT6ME6');
+    </script>
 
 </head>
 <!-- END: Head-->
@@ -121,5 +131,4 @@
     </script>
 </body>
 <!-- END: Body-->
-
 </html>
